# PUBG-BAR

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: __init__.py  config.py  database.py  redis.py
backend/app/models/: __init__.py  player.py
backend/app/routes/: __init__.py  players.py  rankings.py  steam.py
backend/app/services/: __init__.py  player_service.py  ranking_service.py  steam_service.py
backend/sql/: init.sql
frontend/: .dockerignore  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/assets/css/: main.css
frontend/composables/: useApi.ts
frontend/pages/: index.vue  search.vue
frontend/pages/player/: [name].vue
frontend/pages/rankings/: index.vue
nginx/: nginx.conf
scripts/: deploy.sh
